update3 final version test task
