# docs/swagger.json
@@ -14,24 +14,7 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/hello": {
-            "get": {
-                "description": "first request",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "hello"
-                ],
-                "summary": "Get hello",
-                "responses": {
-                    "200": {
-                        "description": "hello"
-                    }
-                }
-            }
-        },
-        "/photos": {
+        "/get_last_images": {
             "get": {
                 "description": "Get the 3 latest uploaded photos with original and negative copies",
                 "produces": [
@@ -53,7 +36,26 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/hello": {
+            "get": {
+                "description": "first request",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "hello"
+                ],
+                "summary": "Get hello",
+                "responses": {
+                    "200": {
+                        "description": "hello"
+                    }
+                }
+            }
+        },
+        "/negative_image": {
             "post": {
                 "description": "Upload image and create negative copy",
                 "consumes": [
